cmake_minimum_required(VERSION 2.8)
project(Cavs)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(BEFORE ${PROJECT_BINARY_DIR})

FIND_PACKAGE(MPI REQUIRED)
IF(MPI_CXX_FOUND)
  message(STATUS "MPI compiler found:" ${MPI_CXX_COMPILER})
  message(STATUS "MPI compile flags: " ${MPI_CXX_COMPILE_FLAGS})
  message(STATUS "MPI include path: " ${MPI_CXX_INCLUDE_PATH})
  message(STATUS "MPI LINK flags: " ${MPI_CXX_LINK_FLAGS})
  message(STATUS "MPI libraries: " ${MPI_CXX_LIBRARIES})
  include_directories(SYSTEM ${MPI_CXX_INCLUDE_PATH})
ENDIF()

FIND_PACKAGE(CUDA 8.0 REQUIRED)
IF(CUDA_FOUND)
  message(STATUS "CUDA version:" ${CUDA_VERSION})
  message(STATUS "CUDA toolkit root dir:" ${CUDA_TOOLKIT_ROOT_DIR})
  message(STATUS "CUDA include dir:" ${CUDA_INCLUDE_DIRS})
  message(STATUS "CUDA librares:" ${CUDA_LIBRARIES})
  message(STATUS "CUDA cublas librares:" ${CUDA_CUBLAS_LIBRARIES})
  include_directories(SYSTEM ${CUDA_INCLUDE_DIRS})
ENDIF()

SET(EXECUTABLE_OUTPUT_PATH, "${PROJECT_SOURCE_DIR/bin}")
SET(LIBRARY_OUTPUT_PATH, "${PROJECT_SOURCE_DIR/lib}")
ADD_SUBDIRECTORY(cavs)
#add_subdirectory(apps)
