add_library(op_decl OBJECT op_decl.cc)
add_library(op_decl_variable OBJECT op_decl_variable.cc)
add_library(op_impl_assign OBJECT op_impl_assign.cc)
add_library(op_decl_conv OBJECT op_decl_conv.cc)
add_library(op_def_builder OBJECT op_def_builder.cc)
add_library(op_impl_elementwise_test OBJECT op_impl_elementwise_test.cc)
add_library(op_decl_elementwise OBJECT op_decl_elementwise.cc)
add_library(op_def_builder_test OBJECT op_def_builder_test.cc)
add_library(op_decl_placeholder OBJECT op_decl_placeholder.cc)
add_library(op_impl OBJECT op_impl.cc)

cuda_add_library(cavs_cuda_common cuda_common.cu)
cuda_add_library(cavs_op_impl_elementwise op_impl_elementwise.cu)
cuda_add_library(cavs_op_impl_variable op_impl_variable.cu)
cuda_add_library(cavs_op_impl_conv_cudnn op_impl_conv_cudnn.cu)
cuda_add_library(cavs_op_impl_placeholder op_impl_placeholder.cu)
